--- a/backend/produk-index.html
+++ b/backend/produk-index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Re:Laptop - Histori Transaksi</title>
+    <title>LaptopBekas.ID - Histori Transaksi</title>
 
     <!-- Google Font -->
     <link rel="stylesheet"
@@ -30,7 +30,7 @@
                     </a>
                 </li>
                 <li class="nav-item d-none d-sm-inline-block">
-                    <a href="#" class="nav-link">Re:Laptop - Dashboard Admin</a>
+                    <a href="#" class="nav-link">LaptopBekas.ID - Dashboard Admin</a>
                 </li>
             </ul>
 
@@ -41,14 +41,14 @@
                     </a>
                 </li>
             </ul>
-        </nav> 
+        </nav>
 
         <!-- SIDEBAR -->
         <aside class="main-sidebar sidebar-dark-primary elevation-4">
 
             <a href="../frontend/home.html" class="brand-link d-flex align-items-center">
                 <div class="brand-text ml-2 d-flex flex-column" style="line-height: 1;">
-                    <span class="font-weight-bold mb-1">Re:Laptop</span>
+                    <span class="font-weight-bold mb-1">LaptopBekas.ID</span>
                 </div>
             </a>
 
@@ -105,8 +105,8 @@
 
                         <br>
 
-                       <li class="nav-item">
-                            <a href="../frontend/login.html" class="nav-link">
+                        <li class="nav-item">
+                            <a href="#" class="nav-link" id="btnLogout">
                                 <i class="nav-icon fas fa-sign-out-alt"></i>
                                 <p>Logout</p>
                             </a>
@@ -126,7 +126,7 @@
                 <div class="container-fluid">
                     <div class="row mb-2">
                         <div class="col-sm-6">
-<h1 class="m-0">Data Produk</h1>
+                            <h1 class="m-0">Data Produk</h1>
                         </div>
                         <div class="col-sm-6">
                             <ol class="breadcrumb float-sm-right">
@@ -142,102 +142,192 @@
             <section class="content">
                 <div class="container-fluid">
 
-<!-- TABEL PRODUK -->
-<div class="card">
-<div class="card-header">
-    <div class="row">
-        <div class="col-md-6">
-            <h3 class="card-title">Daftar Produk</h3>
-        </div>
-        <div class="col-md-6 text-right">
-            <a href="form-produk.html" class="btn btn-success btn-sm">
-                <i class="fas fa-plus"></i> Tambah Produk
+                    <!-- TABEL PRODUK -->
+                    <div class="card">
+                        <div class="card-header">
+                            <div class="row">
+                                <div class="col-md-6">
+                                    <h3 class="card-title">Daftar Produk</h3>
+                                </div>
+                                <div class="col-md-6 text-right">
+                                    <a href="form-produk.html" class="btn btn-success btn-sm">
+                                        <i class="fas fa-plus"></i> Tambah Produk
+                                    </a>
+                                </div>
+                            </div>
+                        </div>
+
+                        <div class="card-body table-responsive p-0">
+                            <table class="table table-hover text-nowrap">
+                                <thead>
+                                    <tr>
+                                        <th>No</th>
+                                        <th>Nama Produk</th>
+                                        <th>Harga</th>
+                                        <th>Status</th>
+                                        <th>Aksi</th>
+                                    </tr>
+                                </thead>
+
+<tbody>
+
+    <tr>
+        <td class="text-center">1</td>
+        <td><strong>MacBook Pro M1 2020</strong></td>
+        <td>Rp 12.500.000</td>
+        <td><span class="badge badge-success">Ready</span></td>
+        <td>
+            <a href="detail-produk-1.html" class="btn btn-success btn-sm">
+                <i class="fas fa-eye"></i> Detail
             </a>
-        </div>
-    </div>
-</div>
+            <a href="#" class="btn btn-primary btn-sm">
+                <i class="fas fa-edit"></i> Edit
+            </a>
+            <a href="#" class="btn btn-danger btn-sm">
+                <i class="fas fa-trash"></i> Hapus
+            </a>
+        </td>
+    </tr>
 
-    <div class="card-body table-responsive p-0">
-        <table class="table table-hover text-nowrap">
-            <thead>
-                <tr>
-                    <th>No</th>
-                    <th>Nama Produk</th>
-                    <th>Harga</th>
-                    <th>Status</th>
-                    <th>Aksi</th>
-                </tr>
-            </thead>
+    <tr>
+        <td class="text-center">2</td>
+        <td><strong>ThinkPad X1 Carbon</strong></td>
+        <td>Rp 9.850.000</td>
+        <td><span class="badge badge-success">Ready</span></td>
+        <td>
+            <a href="detail-produk-2.html" class="btn btn-success btn-sm">
+                <i class="fas fa-eye"></i> Detail
+            </a>
+            <a href="#" class="btn btn-primary btn-sm">
+                <i class="fas fa-edit"></i> Edit
+            </a>
+            <a href="#" class="btn btn-danger btn-sm">
+                <i class="fas fa-trash"></i> Hapus
+            </a>
+        </td>
+    </tr>
 
-            <tbody>
+    <tr>
+        <td class="text-center">3</td>
+        <td><strong>ROG Zephyrus G14</strong></td>
+        <td>Rp 16.200.000</td>
+        <td><span class="badge badge-danger">Hot Deal</span></td>
+        <td>
+            <a href="detail-produk.html" class="btn btn-success btn-sm">
+                <i class="fas fa-eye"></i> Detail
+            </a>
+            <a href="#" class="btn btn-primary btn-sm">
+                <i class="fas fa-edit"></i> Edit
+            </a>
+            <a href="#" class="btn btn-danger btn-sm">
+                <i class="fas fa-trash"></i> Hapus
+            </a>
+        </td>
+    </tr>
 
-                <tr>
-                    <td class="text-center">1</td>
-                    <td><strong>Dell Latitude 5490</strong></td>
-                    <td>Rp 5.200.000</td>
-                    <td><span class="badge badge-success">Ready</span></td>
-                    <td>
-                        <a href="detail-produk.html" class="btn btn-success btn-sm">
-                            <i class="fas fa-eye"></i> Detail
-                        </a>
-                        <a href="#" class="btn btn-primary btn-sm">
-                            <i class="fas fa-edit"></i> Edit
-                        </a>
-                        <a href="#" class="btn btn-danger btn-sm">
-                            <i class="fas fa-trash"></i> Hapus
-                        </a>
-                    </td>
-                </tr>
+    <tr>
+        <td class="text-center">4</td>
+        <td><strong>Dell XPS 13 9300</strong></td>
+        <td>Rp 13.750.000</td>
+        <td><span class="badge badge-success">Ready</span></td>
+        <td>
+            <a href="detail-produk.html" class="btn btn-success btn-sm">
+                <i class="fas fa-eye"></i> Detail
+            </a>
+            <a href="#" class="btn btn-primary btn-sm">
+                <i class="fas fa-edit"></i> Edit
+            </a>
+            <a href="#" class="btn btn-danger btn-sm">
+                <i class="fas fa-trash"></i> Hapus
+            </a>
+        </td>
+    </tr>
 
-                <tr>
-                    <td class="text-center">2</td>
-                    <td><strong>Lenovo ThinkPad X270</strong></td>
-                    <td>Rp 4.800.000</td>
-                    <td><span class="badge badge-success">Ready</span></td>
-                    <td>
-                        <a href="detail-produk.html" class="btn btn-success btn-sm">
-                            <i class="fas fa-eye"></i> Detail
-                        </a>
-                        <a href="#" class="btn btn-primary btn-sm">
-                            <i class="fas fa-edit"></i> Edit
-                        </a>
-                        <a href="#" class="btn btn-danger btn-sm">
-                            <i class="fas fa-trash"></i> Hapus
-                        </a>
-                    </td>
-                </tr>
+    <tr>
+        <td class="text-center">5</td>
+        <td><strong>HP Spectre x360</strong></td>
+        <td>Rp 15.200.000</td>
+        <td><span class="badge badge-success">Ready</span></td>
+        <td>
+            <a href="detail-produk.html" class="btn btn-success btn-sm">
+                <i class="fas fa-eye"></i> Detail
+            </a>
+            <a href="#" class="btn btn-primary btn-sm">
+                <i class="fas fa-edit"></i> Edit
+            </a>
+            <a href="#" class="btn btn-danger btn-sm">
+                <i class="fas fa-trash"></i> Hapus
+            </a>
+        </td>
+    </tr>
 
-                <tr>
-                    <td class="text-center">3</td>
-                    <td><strong>HP EliteBook 840 G3</strong></td>
-                    <td>Rp 5.800.000</td>
-                    <td><span class="badge badge-success">Ready</span></td>
-                    <td>
-                        <a href="detail-produk.html" class="btn btn-success btn-sm">
-                            <i class="fas fa-eye"></i> Detail
-                        </a>
-                        <a href="#" class="btn btn-primary btn-sm">
-                            <i class="fas fa-edit"></i> Edit
-                        </a>
-                        <a href="#" class="btn btn-danger btn-sm">
-                            <i class="fas fa-trash"></i> Hapus
-                        </a>
-                    </td>
-                </tr>
+    <tr>
+        <td class="text-center">6</td>
+        <td><strong>Acer Swift 3 Ryzen</strong></td>
+        <td>Rp 9.300.000</td>
+        <td><span class="badge badge-danger">Hot Deal</span></td>
+        <td>
+            <a href="detail-produk.html" class="btn btn-success btn-sm">
+                <i class="fas fa-eye"></i> Detail
+            </a>
+            <a href="#" class="btn btn-primary btn-sm">
+                <i class="fas fa-edit"></i> Edit
+            </a>
+            <a href="#" class="btn btn-danger btn-sm">
+                <i class="fas fa-trash"></i> Hapus
+            </a>
+        </td>
+    </tr>
 
-            </tbody>
-        </table>
-    </div>
+    <tr>
+        <td class="text-center">7</td>
+        <td><strong>Surface Laptop 4</strong></td>
+        <td>Rp 14.900.000</td>
+        <td><span class="badge badge-success">Ready</span></td>
+        <td>
+            <a href="detail-produk.html" class="btn btn-success btn-sm">
+                <i class="fas fa-eye"></i> Detail
+            </a>
+            <a href="#" class="btn btn-primary btn-sm">
+                <i class="fas fa-edit"></i> Edit
+            </a>
+            <a href="#" class="btn btn-danger btn-sm">
+                <i class="fas fa-trash"></i> Hapus
+            </a>
+        </td>
+    </tr>
 
-    <div class="card-footer clearfix">
-        <ul class="pagination pagination-sm m-0 float-right">
-            <li class="page-item"><a class="page-link" href="#">«</a></li>
-            <li class="page-item active"><a class="page-link" href="#">1</a></li>
-            <li class="page-item"><a class="page-link" href="#">2</a></li>
-            <li class="page-item"><a class="page-link" href="#">»</a></li>
-        </ul>
-    </div>
-</div>
+    <tr>
+        <td class="text-center">8</td>
+        <td><strong>MSI Katana GF66</strong></td>
+        <td>Rp 17.250.000</td>
+        <td><span class="badge badge-danger">Hot Deal</span></td>
+        <td>
+            <a href="detail-produk.html" class="btn btn-success btn-sm">
+                <i class="fas fa-eye"></i> Detail
+            </a>
+            <a href="#" class="btn btn-primary btn-sm">
+                <i class="fas fa-edit"></i> Edit
+            </a>
+            <a href="#" class="btn btn-danger btn-sm">
+                <i class="fas fa-trash"></i> Hapus
+            </a>
+        </td>
+    </tr>
+
+</tbody>
+                            </table>
+                        </div>
+
+                        <div class="card-footer clearfix">
+                            <ul class="pagination pagination-sm m-0 float-right">
+                                <li class="page-item"><a class="page-link" href="#">«</a></li>
+                                <li class="page-item active"><a class="page-link" href="#">1</a></li>
+                                <li class="page-item"><a class="page-link" href="#">2</a></li>
+                                <li class="page-item"><a class="page-link" href="#">»</a></li>
+                            </ul>
+                        </div>
+                    </div>
 
 
                 </div>
@@ -258,6 +348,17 @@
     <script src="plugins/bootstrap/js/bootstrap.bundle.min.js"></script>
     <script src="dist/js/adminlte.min.js"></script>
 
+    <script>
+        document.getElementById("btnLogout").addEventListener("click", function (e) {
+            e.preventDefault();
+
+            // hapus status login
+            localStorage.removeItem("isLogin");
+
+            // redirect ke halaman home
+            window.location.href = "../frontend/home.html";
+        });
+    </script>
 </body>
 
 </html>
