--- a/backend/users-index.html
+++ b/backend/users-index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Re:Laptop - Data User</title>
+    <title>LaptopBekas.ID - Data User</title>
 
     <!-- Google Font -->
     <link rel="stylesheet"
@@ -18,36 +18,36 @@
 </head>
 
 <body class="hold-transition sidebar-mini">
-<div class="wrapper">
+    <div class="wrapper">
 
-    <!-- NAVBAR -->
-    <nav class="main-header navbar navbar-expand navbar-white navbar-light">
-        <ul class="navbar-nav">
-            <li class="nav-item">
-                <a class="nav-link" data-widget="pushmenu" href="#">
-                    <i class="fas fa-bars"></i>
-                </a>
-            </li>
-            <li class="nav-item d-none d-sm-inline-block">
-                <a href="#" class="nav-link">Re:Laptop - Dashboard Admin</a>
-            </li>
-        </ul>
+        <!-- NAVBAR -->
+        <nav class="main-header navbar navbar-expand navbar-white navbar-light">
+            <ul class="navbar-nav">
+                <li class="nav-item">
+                    <a class="nav-link" data-widget="pushmenu" href="#">
+                        <i class="fas fa-bars"></i>
+                    </a>
+                </li>
+                <li class="nav-item d-none d-sm-inline-block">
+                    <a href="#" class="nav-link">LaptopBekas.ID - Dashboard Admin</a>
+                </li>
+            </ul>
 
-        <ul class="navbar-nav ml-auto">
-            <li class="nav-item">
-                <a class="nav-link" data-widget="fullscreen" href="#">
-                    <i class="fas fa-expand-arrows-alt"></i>
-                </a>
-            </li>
-        </ul>
-    </nav> 
+            <ul class="navbar-nav ml-auto">
+                <li class="nav-item">
+                    <a class="nav-link" data-widget="fullscreen" href="#">
+                        <i class="fas fa-expand-arrows-alt"></i>
+                    </a>
+                </li>
+            </ul>
+        </nav>
 
-    <!-- SIDEBAR -->
-    <aside class="main-sidebar sidebar-dark-primary elevation-4">
+        <!-- SIDEBAR -->
+        <aside class="main-sidebar sidebar-dark-primary elevation-4">
 
             <a href="../frontend/home.html" class="brand-link d-flex align-items-center">
                 <div class="brand-text ml-2 d-flex flex-column" style="line-height: 1;">
-                    <span class="font-weight-bold mb-1">Re:Laptop</span>
+                    <span class="font-weight-bold mb-1">LaptopBekas.ID</span>
                 </div>
             </a>
 
@@ -70,154 +70,298 @@
                     </div>
                 </div>
 
-            <nav class="mt-2">
-                <ul class="nav nav-pills nav-sidebar flex-column">
-                    <li class="nav-item">
-                        <a href="dashboard.html" class="nav-link">
-                            <i class="nav-icon fas fa-tachometer-alt"></i>
-                            <p>Dashboard</p>
-                        </a>
-                    </li>
+                <nav class="mt-2">
+                    <ul class="nav nav-pills nav-sidebar flex-column">
+                        <li class="nav-item">
+                            <a href="dashboard.html" class="nav-link">
+                                <i class="nav-icon fas fa-tachometer-alt"></i>
+                                <p>Dashboard</p>
+                            </a>
+                        </li>
 
-                    <li class="nav-item">
-                        <a href="users-index.html" class="nav-link active">
-                            <i class="nav-icon fas fa-users"></i>
-                            <p>Data User</p>
-                        </a>
-                    </li>
+                        <li class="nav-item">
+                            <a href="users-index.html" class="nav-link active">
+                                <i class="nav-icon fas fa-users"></i>
+                                <p>Data User</p>
+                            </a>
+                        </li>
 
-                    <li class="nav-item">
-                        <a href="produk-index.html" class="nav-link">
-                            <i class="nav-icon fas fa-laptop"></i>
-                            <p>Data Produk</p>
-                        </a>
-                    </li>
+                        <li class="nav-item">
+                            <a href="produk-index.html" class="nav-link">
+                                <i class="nav-icon fas fa-laptop"></i>
+                                <p>Data Produk</p>
+                            </a>
+                        </li>
 
-                    <li class="nav-item">
-                        <a href="histori-index.html" class="nav-link">
-                            <i class="nav-icon fas fa-history"></i>
-                            <p>Histori</p>
-                        </a>
-                    </li>
+                        <li class="nav-item">
+                            <a href="histori-index.html" class="nav-link">
+                                <i class="nav-icon fas fa-history"></i>
+                                <p>Histori</p>
+                            </a>
+                        </li>
 
-                    <li class="nav-item mt-3">
-                        <a href="../frontend/login.html" class="nav-link">
-                            <i class="nav-icon fas fa-sign-out-alt"></i>
-                            <p>Logout</p>
-                        </a>
-                    </li>
-                </ul>
-            </nav>
-        </div>
-    </aside>
+                        <br>
 
-    <!-- CONTENT -->
-    <div class="content-wrapper">
+                        <li class="nav-item">
+                            <a href="#" class="nav-link" id="btnLogout">
+                                <i class="nav-icon fas fa-sign-out-alt"></i>
+                                <p>Logout</p>
+                            </a>
+                        </li>
+                    </ul>
+                </nav>
+            </div>
+        </aside>
 
-        <!-- HEADER -->
-        <div class="content-header">
-            <div class="container-fluid">
-                <div class="row mb-2">
-                    <div class="col-sm-6">
-                        <h1 class="m-0">Data User</h1>
-                    </div>
-                    <div class="col-sm-6">
-                        <ol class="breadcrumb float-sm-right">
-                            <li class="breadcrumb-item"><a href="../frontend/home.html">Home</a></li>
-                            <li class="breadcrumb-item">User</li>
-                        </ol>
+        <!-- CONTENT -->
+        <div class="content-wrapper">
+
+            <!-- HEADER -->
+            <div class="content-header">
+                <div class="container-fluid">
+                    <div class="row mb-2">
+                        <div class="col-sm-6">
+                            <h1 class="m-0">Data User</h1>
+                        </div>
+                        <div class="col-sm-6">
+                            <ol class="breadcrumb float-sm-right">
+                                <li class="breadcrumb-item"><a href="../frontend/home.html">Home</a></li>
+                                <li class="breadcrumb-item">User</li>
+                            </ol>
+                        </div>
                     </div>
                 </div>
             </div>
-        </div>
 
-        <!-- MAIN CONTENT -->
-        <section class="content">
-            <div class="container-fluid">
+            <!-- MAIN CONTENT -->
+            <section class="content">
+                <div class="container-fluid">
 
-                <div class="card">
-                    <div class="card-header">
-                        <div class="row">
-                            <div class="col-md-6">
-                                <h3 class="card-title">Daftar User</h3>
+                    <div class="card">
+                        <div class="card-header">
+                            <div class="row">
+                                <div class="col-md-6">
+                                    <h3 class="card-title">Daftar User</h3>
+                                </div>
+                                <div class="col-md-6 text-right">
+                                    <a href="form-users.html" class="btn btn-success btn-sm">
+                                        <i class="fas fa-plus"></i> Tambah User
+                                    </a>
+                                </div>
                             </div>
-                            <div class="col-md-6 text-right">
-                                <a href="form-users.html" class="btn btn-success btn-sm">
-                                    <i class="fas fa-plus"></i> Tambah User
-                                </a>
-                            </div>
+                        </div>
+
+                        <div class="card-body table-responsive p-0">
+                            <table class="table table-hover text-nowrap">
+                                <thead>
+                                    <tr>
+                                        <th>No</th>
+                                        <th>Nama</th>
+                                        <th>Email</th>
+                                        <th>No Telp</th>
+                                        <th>Gender</th>
+                                        <th>Aksi</th>
+                                    </tr>
+                                </thead>
+                                <tbody>
+                                    <tr>
+                                        <td class="text-center">1</td>
+                                        <td><strong>Raditya</strong></td>
+                                        <td>raditya@gmail.com</td>
+                                        <td>08119738197</td>
+                                        <td>Laki-laki</td>
+                                        <td>
+                                            <a href="#" class="btn btn-primary btn-sm">
+                                                <i class="fas fa-edit"></i> Edit
+                                            </a>
+                                            <a href="#" class="btn btn-danger btn-sm">
+                                                <i class="fas fa-trash"></i> Hapus
+                                            </a>
+                                        </td>
+                                    </tr>
+
+                                    <tr>
+                                        <td class="text-center">2</td>
+                                        <td><strong>Aurora</strong></td>
+                                        <td>aurora@gmail.com</td>
+                                        <td>0831213132</td>
+                                        <td>Perempuan</td>
+                                        <td>
+                                            <a href="#" class="btn btn-primary btn-sm">
+                                                <i class="fas fa-edit"></i> Edit
+                                            </a>
+                                            <a href="#" class="btn btn-danger btn-sm">
+                                                <i class="fas fa-trash"></i> Hapus
+                                            </a>
+                                        </td>
+                                    </tr>
+
+                                    <tr>
+    <td class="text-center">3</td>
+    <td><strong>Nadia</strong></td>
+    <td>nadia@gmail.com</td>
+    <td>082134567890</td>
+    <td>Perempuan</td>
+    <td>
+        <a href="#" class="btn btn-primary btn-sm">
+            <i class="fas fa-edit"></i> Edit
+        </a>
+        <a href="#" class="btn btn-danger btn-sm">
+            <i class="fas fa-trash"></i> Hapus
+        </a>
+    </td>
+</tr>
+
+<tr>
+    <td class="text-center">4</td>
+    <td><strong>Rizky</strong></td>
+    <td>rizky@gmail.com</td>
+    <td>081298765432</td>
+    <td>Laki-laki</td>
+    <td>
+        <a href="#" class="btn btn-primary btn-sm">
+            <i class="fas fa-edit"></i> Edit
+        </a>
+        <a href="#" class="btn btn-danger btn-sm">
+            <i class="fas fa-trash"></i> Hapus
+        </a>
+    </td>
+</tr>
+
+<tr>
+    <td class="text-center">5</td>
+    <td><strong>Melati</strong></td>
+    <td>melati@gmail.com</td>
+    <td>085712345678</td>
+    <td>Perempuan</td>
+    <td>
+        <a href="#" class="btn btn-primary btn-sm">
+            <i class="fas fa-edit"></i> Edit
+        </a>
+        <a href="#" class="btn btn-danger btn-sm">
+            <i class="fas fa-trash"></i> Hapus
+        </a>
+    </td>
+</tr>
+
+<tr>
+    <td class="text-center">6</td>
+    <td><strong>Dimas</strong></td>
+    <td>dimas@gmail.com</td>
+    <td>087812349876</td>
+    <td>Laki-laki</td>
+    <td>
+        <a href="#" class="btn btn-primary btn-sm">
+            <i class="fas fa-edit"></i> Edit
+        </a>
+        <a href="#" class="btn btn-danger btn-sm">
+            <i class="fas fa-trash"></i> Hapus
+        </a>
+    </td>
+</tr>
+
+<tr>
+    <td class="text-center">7</td>
+    <td><strong>Salsabila</strong></td>
+    <td>salsa@gmail.com</td>
+    <td>081377889900</td>
+    <td>Perempuan</td>
+    <td>
+        <a href="#" class="btn btn-primary btn-sm">
+            <i class="fas fa-edit"></i> Edit
+        </a>
+        <a href="#" class="btn btn-danger btn-sm">
+            <i class="fas fa-trash"></i> Hapus
+        </a>
+    </td>
+</tr>
+
+<tr>
+    <td class="text-center">8</td>
+    <td><strong>Bagas</strong></td>
+    <td>bagas@gmail.com</td>
+    <td>089512345111</td>
+    <td>Laki-laki</td>
+    <td>
+        <a href="#" class="btn btn-primary btn-sm">
+            <i class="fas fa-edit"></i> Edit
+        </a>
+        <a href="#" class="btn btn-danger btn-sm">
+            <i class="fas fa-trash"></i> Hapus
+        </a>
+    </td>
+</tr>
+
+<tr>
+    <td class="text-center">9</td>
+    <td><strong>Intan</strong></td>
+    <td>intan@gmail.com</td>
+    <td>082233445566</td>
+    <td>Perempuan</td>
+    <td>
+        <a href="#" class="btn btn-primary btn-sm">
+            <i class="fas fa-edit"></i> Edit
+        </a>
+        <a href="#" class="btn btn-danger btn-sm">
+            <i class="fas fa-trash"></i> Hapus
+        </a>
+    </td>
+</tr>
+
+<tr>
+    <td class="text-center">10</td>
+    <td><strong>Fajar</strong></td>
+    <td>fajar@gmail.com</td>
+    <td>081344556677</td>
+    <td>Laki-laki</td>
+    <td>
+        <a href="#" class="btn btn-primary btn-sm">
+            <i class="fas fa-edit"></i> Edit
+        </a>
+        <a href="#" class="btn btn-danger btn-sm">
+            <i class="fas fa-trash"></i> Hapus
+        </a>
+    </td>
+</tr>
+
+                                </tbody>
+                            </table>
+                        </div>
+
+                        <div class="card-footer clearfix">
+                            <ul class="pagination pagination-sm m-0 float-right">
+                                <li class="page-item active"><a class="page-link" href="#">1</a></li>
+                            </ul>
                         </div>
                     </div>
 
-                    <div class="card-body table-responsive p-0">
-                        <table class="table table-hover text-nowrap">
-                            <thead>
-                                <tr>
-                                    <th>No</th>
-                                    <th>Nama</th>
-                                    <th>Email</th>
-                                    <th>No Telp</th>
-                                    <th>Gender</th>
-                                    <th>Aksi</th>
-                                </tr>
-                            </thead>
-                            <tbody>
-                                <tr>
-                                    <td class="text-center">1</td>
-                                    <td><strong>Raditya</strong></td>
-                                    <td>raditya@gmail.com</td>
-                                    <td>08119738197</td>
-                                    <td>Laki-laki</td>
-                                    <td>
-                                        <a href="#" class="btn btn-primary btn-sm">
-                                            <i class="fas fa-edit"></i> Edit
-                                        </a>
-                                        <a href="#" class="btn btn-danger btn-sm">
-                                            <i class="fas fa-trash"></i> Hapus
-                                        </a>
-                                    </td>
-                                </tr>
-
-                                <tr>
-                                    <td class="text-center">2</td>
-                                    <td><strong>Aurora</strong></td>
-                                    <td>aurora@gmail.com</td>
-                                    <td>0831213132</td>
-                                    <td>Perempuan</td>
-                                    <td>
-                                        <a href="#" class="btn btn-primary btn-sm">
-                                            <i class="fas fa-edit"></i> Edit
-                                        </a>
-                                        <a href="#" class="btn btn-danger btn-sm">
-                                            <i class="fas fa-trash"></i> Hapus
-                                        </a>
-                                    </td>
-                                </tr>
-                            </tbody>
-                        </table>
-                    </div>
-
-                    <div class="card-footer clearfix">
-                        <ul class="pagination pagination-sm m-0 float-right">
-                            <li class="page-item active"><a class="page-link" href="#">1</a></li>
-                        </ul>
-                    </div>
                 </div>
+            </section>
+        </div>
 
-            </div>
-        </section>
+        <!-- FOOTER -->
+        <footer class="main-footer">
+            <strong>Copyright &copy; 2025 Kelompok 15</strong>
+        </footer>
     </div>
 
-    <!-- FOOTER -->
-    <footer class="main-footer">
-        <strong>Copyright &copy; 2025 Kelompok 15</strong>
-    </footer>
-</div>
+    <!-- SCRIPT -->
+    <script src="plugins/jquery/jquery.min.js"></script>
+    <script src="plugins/bootstrap/js/bootstrap.bundle.min.js"></script>
+    <script src="dist/js/adminlte.min.js"></script>
 
-<!-- SCRIPT -->
-<script src="plugins/jquery/jquery.min.js"></script>
-<script src="plugins/bootstrap/js/bootstrap.bundle.min.js"></script>
-<script src="dist/js/adminlte.min.js"></script>
+    <script>
+        document.getElementById("btnLogout").addEventListener("click", function (e) {
+            e.preventDefault();
+
+            // hapus status login
+            localStorage.removeItem("isLogin");
+
+            // redirect ke halaman home
+            window.location.href = "../frontend/home.html";
+        });
+    </script>
 
 </body>
+
 </html>
